Update 6.1P Chameleon T2_2023.md
-Updated web dev progress
-Added student contributions 
-Minor typo corrections

--- a/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
@@ -413,13 +413,11 @@ The website for the Chameleon company overall aims to publicise the achievements
 
 #### Goals & Objectives
 
-The website’s main objective is to provide a single source for all Chameleon-related matters, including other sub-companies information, objectives and links. We want to use the Chameleon website to advocate for the company and promote it while having the website be visually appealing
-and come with straightforward functionality.
+The website’s main objective is to provide a single source for all Chameleon-related matters, including other sub-companies information, objectives and links. We want to use the Chameleon website to advocate for the company and promote it while having the website be visually appealing and come with straightforward functionality.
 
 #### Aims this Trimester
 
-The aim for this trimester will be to modify the front-end and the back-end of the website and to make it optimised for mobile access. While the back-end has yet to be implemented, it means we have much scope to implement this from scratch. This includes setting up the staff log-in portal,
-implementing APIs with SendGrid and Mailchimp and creating a client portal.
+The aim for this trimester will be to modify the front-end and the back-end of the website and to make it optimised for mobile access. While the back-end has yet to be implemented, it means we have much scope to implement this from scratch. This includes setting up the staff log-in portal and implementing the Mailgun API and creating a client portal.
 
 For the front-end of the website, we aim to make the website more appealing with the students’ design and web development skills. We want to deliver a high-quality, attractive, easy-to-navigate and high usability website. To do this, we will implement correct wireframing and prototyping techniques to develop a solid design that meets requirements before implementation.
 
@@ -428,24 +426,23 @@ It will be necessary for the Chameleon Website to showcase all the other project
 Overall, optimising the user website experience and reducing awkwardness is the primary aim for this trimester. 
 
 #### Web Dev Team Progress 
-This trimester, we have researched on 
+This trimester, we have researched the ideal webmail API to use for the platform (Mailgun), began implenting the design teams design changes, decided upon what content should be placed in the resources section, and added new pages to accomodate the new content in the resources section. Updates and improvements have been made to the blog page, and a CSS framework (Bootstrap) has been decided upon to ensure consistincy across how stylings are written. SEO stratgies have also been researched. 
 
 
 #### Web Design Team Progress
 This trimester, we focused on redesigning the Chameleon website so all pages are consistent. Then the web development team can base their code on that design. Thus, the final product of our website will be high usability with consistency. We also create new logos for our Chameleon website and MOP, showing our company's values to the public.  
 
-#### Our achievements so far are listed below:
+#### Our main achievements so far are listed below:
 - Create the Chameleon website that is both visually appealing and easy to navigate, using the provided design from the design team as a guide
 - Redesign the EV website: Signin, About Us and FAQ
 - Redesign the Chameleon website: Homepage, About Us, Latest News, Profile, Login, Signup and Reset Password
-- Research Email's API and we decided to use Mailgun
+- Research Email API's and decide to use Mailgun
 - Research the Resource page in the Chameleon website. We plan to add information about IoT, Smart Home/Cities, Transportation and Energy management systems
 - Research on SEO, CSS Framework and what information we will add in About Us page.
-
-
+- Begin implementation of new high-fidelity designs.
 
 #### Next Steps
-The next steps for the remainder of this trimester is to update the frontend code of the website to match the designs as produced by the design team, as well as work on the backend to create 
+The next steps for the remainder of this trimester is to update the frontend code of the website to match the designs as produced by the design team, as well as work on the backend to create a database for storing information and implementing the Mailgun API.
 
 The design team will focus on working with the EV and MOP team leaders to complete design their websites and mobile applications. We will develop the remaining pages of the Chameleon website for the web development team to work on so they have high usability and consistency.   
 
@@ -454,10 +451,8 @@ The design team will focus on working with the EV and MOP team leaders to comple
 - Implement a more aesthetic and navigation friendly website based on the design 
 - Eliminate vulnerababilities after receiving a report from the Cybersecurity team
 - New Chameleon Website and MOP logos
-- 
--
-
-
+- Implement database 
+- Implement Mailgun API
 
 #### Project Members
 
@@ -465,7 +460,7 @@ The design team will focus on working with the EV and MOP team leaders to comple
 | :-- | :-- | :-: | :-: | :-: | :-: | :-: |
 | **Jon Suwannakoot** | 220069966 | Undergrad | Senior | Project Lead, Design Team Lead | Yes | As the project leader, I presented the Chameleon website to junior students in week 1 to attract new students to our project. Afterwards, I allocated students to appropriate Chameleon Projects based on their skills as part of onboarding. Then, I ensure that the Trello board is up-to-date. Also, I hosted and completed meeting minutes and created the new logos for the Chameleon website and MOP projects as part of the design team tasks. Finally, I wrote the guideline on using GitHub Desktop as part of an onboarding for junior students. |
 | **Brodie McCann** | 219307567 | Undergrad | Junior | Design Team Co-leader | Yes |  |
-| **Aaron Vandersluys** | 221178806 | Undergrad | Junior | Dev Team | Yes | Created initial backlog of website team tasks in Trello. Researched, discussed, and observed findings (from other student’s research) and decided upon webmail API for use on Chameleon website. Researched and re-evaluated content to be added to resources section of website. Updated the resources website section to include new component stylings and links to display relevant information identified in content re-evaluation, added placeholder texts for new sections. Updated site navigation bar to include new resource page sections. Collaborated on task 2.1 P with other members of Chameleon leadership. Observed bigger picture and goals of Chameleon website project to lead other students towards completion of company goals. |
+| **Aaron James Vandersluys** | 221178806 | Undergrad | Junior | Dev Team | Yes | Created initial backlog of website team tasks in Trello. Researched, discussed, and observed findings (from other student’s research) and decided upon webmail API for use on Chameleon website. Researched and re-evaluated content to be added to resources section of website. Updated the resources website section to include new component stylings and links to display relevant information identified in content re-evaluation, added placeholder texts for new sections. Updated site navigation bar to include new resource page sections. Collaborated on task 2.1 P with other members of Chameleon leadership. Observed bigger picture and goals of Chameleon website project to lead other students towards completion of company goals. |
 | **Davinderjit Singh** | 219606745 | Undergrad | Senior | Dev Team | Yes |  |
 | **SATYAM Raina** | 222196882 | Undergrad | Junior | Dev Team | Yes |   |
 | **Mukund Nivas Srinivasan** | 219436166 | Undergrad | Junior | Dev Team | Yes |  |
@@ -480,8 +475,8 @@ The design team will focus on working with the EV and MOP team leaders to comple
 | **Aye Moh Moh Shwe** | 220462239 | Undergrad | Senior | Dev Team |  |
 | **George Chia** | 219600175 | Undergrad | Junior | Dev Team |  |  |
 | **Navin Selvaraj** | 222056367 | Undergrad | Junior | Dev Team |  |  |
-| **Muhammed Rehan Qureshi** | 218062706 | Undergrad | Junior | Dev team |  |    |
-| **Tatiana Deinega** | 221117779 | Postgrad | Junior | Dev Team |  |  |
+| **Muhammed Rehan Qureshi** | 218062706 | Undergrad | Junior | Dev team |  | In the first week, I started learning about GitHub and the Trello board from the resources given by the senior team. Attended every scheduled class as well as the weekly mentor meetings. Assigned myself to a few tasks from the Trello board and started working on them. One task assigned to me is completed. The completed task is the blog/news page task. Where the customers can see the latest updates happening to the project posted by the administrator. On the other two tasks, I have started to work already. Right now, I am working on staff login portal task which allows to have a separate login page for the staff. And the feature for that task includes login, sign up, and reset password. |
+| **Tatiana Deinega** | 221117779 | Postgrad | Junior | Dev Team |  |Week 1-3, researched about the company, its projects, their goals and current progress, watched the recording of lectures, team meetings and read the meetings as I was unable to join them untill the 3rd of August. Week 4 – 5, participated in mentor and team meetings,fully rewrote the code for the landing page to align it with the reference from the designers team which was received on the 4th of August. Helped with the guidance 2 fellow students who reached out with the request of help. Adjusted the functioning and scaling of the landing page for tablet and mobile version. Wrote the code for a chat bot on a landing page. Prepared the hosting and url for getting our website live as soon as the code is approved by the team. |
 | **MATHEESHA NIRVAN PALLIYAGURUGE** | 222506155 | Undergrad | Junior | Dev Team |  | Upskilled myself about the unit, project details and what specific needs from me. Researched about what webmail API would be much preferred for the chameleon website. Researched about how to publish the chameleon website with URL. Attended weekly mentor meetings and team meetings. Been in communication with the senior members on to get more in-depth knowledge about the uni and the project. |
 | **Yawen Liu** | 218616602 | Undergrad | Junior | Dev Team |  |  |
 | **Pranshul** | 222196274 | Undergrad | Junior | Dev Team |  |  |
