--- a/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
@@ -251,53 +251,51 @@ Convert the old HTML/CSS website to new website that using React framework and a
 ### <a name="evm"></a>Evoleon Mobile Application
 
 #### Overview
-The Evoleon App will help EV owners better plan their trips by identifying optimal EV charging stations as waypoints on their journey and provide them relevant information about those charging stations. 
+The Evoleon App will help EV owners better plan their trips by identifying optimal EV charging stations as waypoints on their journey and provide them relevant information about those charging stations.
 
 #### Goals & Objectives
-The goal of this project is to be able to design and implement a mobile app (Android and IOS) to help consumers identify nearby charging locations. Although there are existing products that are similar, here are a few examples of what the app may offer in addition to the core function of locating a socket: 
-- Providing additional information and filtering of stations based on type (EV vs hydrogen, for example), information on the source of the power (direct solar, grid powered, gas, diesel etc).
-- Providing a full journey planner for longer trips that optimizes for reducing charge time, cost and environmental impact along the route. 
-- Ability to incorporate your usage data with current fuel prices, cost of maintenance etc and provide an indication of real savings for running the vehicle. 
+The goal of this project is to be able to design and implement a mobile app (Android and IOS) to help consumers identify nearby charging locations. Although there are existing products that are similar, here are a few examples of what the app may offer in addition to the core function of locating a socket:   
+
+- Providing additional information and filtering of stations based on type (EV vs hydrogen, for example), information on the source of the power (direct solar, grid powered, gas, diesel etc).  
+- Providing a full journey planner for longer trips that optimizes for reducing charge time, cost and environmental impact along the route.   
+- Ability to incorporate your usage data with current fuel prices, cost of maintenance etc and provide an indication of real savings for running the vehicle.   
 
 
 #### Aims this Trimester
-The aim this trimester is to continue implementing the designs created by previous teams and increase the applications functionality. A basic version of the app is currently working but it only has a few screens implemented and the functionality is very limited. Furthermore, the team aims to implement policies for shared coding practices to provide future teams with detailed references.
+The aim this trimester is to continue implementing the designs created by previous teams and increase the applications functionality. A basic version of the app is currently working but it only has a few screens implemented and the functionality is very limited. 
 
 #### Deliverables
-- Work on adding real EV Location data into the new Firestore locations database.
-- Create a Navigation System for the applications map to travel to a selected EV Charger.
-- Add an option to filter EV chargers on the map based on amenities stored in database for that EV charging location.
-- Move the hamburger menu from the top left of the screen to a menu at the bottom of the screen, similar to the Figma designs.
-- Complete a cyber security review of the app’s authentication process, data storage, code in GitHub repository, and apps terms and conditions.
-- Add the process to reset a user’s password or delete an account.
-- Continue adding user interface code for the applications pages.
+- Work on adding real EV Location data into the new Firestore locations database.  
+- Create a Navigation System for the applications map to travel to a selected EV Charger.  
+- Add an option to filter EV chargers on the map based on amenities stored in database for that EV charging location.  
+- Move the hamburger menu from the top left of the screen to a menu at the bottom of the screen, similar to the Figma designs.  
+- Complete a cyber security review of the app’s authentication process, data storage, code in GitHub repository, and apps terms and conditions.  
+- Add the process to reset a user’s password or delete an account.  
+- Continue adding user interface code for the applications pages. 
 
 #### Current Progress
-The team has created a significant number of user stories, and team members have divided up the user stories into individual tasks. Majority of the team is focusing on the application development while a small portion of the team is focusing on enhancing the current design plans to align them more with the branding guidelines. The list below outlines the team's main achievements so far:
+The team has created many user stories, and team members have divided the user stories into individual tasks. Most of the team focuses on the application development while a small portion focuses on enhancing the current design plans to align them more with the branding guidelines. The list below outlines the team's main achievements so far:
 
-- Completed security review of Firestore database to ensure user details are not compromised.
-- Implemented "About" Screen providing an overview of the application.
-- Implemented functionality to update the application's version.
-- Implemented "Terms and Conditions" Screen.
-- Created password reset functionalities allowing users to reset their passwords if required.
-- Implemented "User Details Update" Screen that allows users to change their personal details.
-- Created a central Documents directory within the GitHub Repository and began adding policy documents in markdown.
-- Updated GitHub repo readme to include a linking directory to the new policy documents. 
+- Completed security review of the Firestore database to ensure user details are not compromised.
+- Implemented a file to standardise the use of the addon prettier.
+- Reviewed and made steps towards overhauling the Evoleon colour scheme.
+- Added Help and Support screen to allow users to review common FAQs.
+- Added a settings page to allow users to customise the Evoleon application better.
+- Implemented a method for password verification through the confirm password box.
+- Updated the error messages produced by Firebase to give users more constructive messages.
+- Implemented the bottom navigation outlined in the high-fidelity design. Added comments for greater readability.
 
 #### Next Steps
-The team will continue to implement code for additional user interface pages along with adding user authentication functionalities. Furthermore, the team will focus on consolidating current achievements to form a plan for the handover process to ensure future teams have all the necessary information to continue working on the project.
+The team is making steps towards implementing the code and design outlined in our high-fidelity designs. This will allow the app to be closer aligned to the EVAT project design and colour schemes outlined. The leadership team will review the documentation and update areas for a smooth and efficient handover.
 
-<br>
-<br>
 <br>
 
 #### Evoleon App Project Members
 
 | **Name** | **Student ID** | **UG/PG** | **J/S** | **Team** | **Lead** | **Achievements** |
 | :-- | :-- | :-: | :-: | :-: | :-: | :-- |
-| **Mick Wiedermann** | 222058299 | Undergrad | Senior | App Dev, Project | Yes |Updated the Evoleon GitHub repo merging and resolving resulting conflicts before cloning to Chameleon (was separate). Created the current trello board (previous board was seperate to Chameleon). Created sprint planning documents and held sprint planning meetings. Added new features to the Evoleon App including the new About screen. Revamped the Chameleon Documents repo with a detailed read me and linking directory. Created Chameleon wide GitHub best practice policy. Created other how to and best practice documents, organise and host weekly meetings, mentored and guided team members.|
+| **Jordan Sam Cooke** | 220208777 | Undergrad | Senior | App Dev |Project|I have organised the onboarding of students to the Evoleon sub-group, which includes running meetings, creating documents, and updating the repository. I have guided students through discussions and meetings to successfully develop new features and implement design elements outlined for the previous designs. Technically reviewed and started to implement a complete overhaul of the colour scheme to allow for the use of colour variables while also utilising either dark or light mode colour schemes depending on the user's preference to allow for greater customisability. I created plans to reevaluate the current documentation of the Evoleon repository to allow for quicker and more effective onboarding next trimester.|
 | **Joel Murphy-Dyer** | 221081809 | Undergrad | Junior | App Dev, Project | Yes | As a project lead for the application development team, I have implemented and coded a terms and conditions page to the app within the signup screen. Additionally, I have maintained regular contact with the team members on how they are progressing with their work.  |
-| **Jordan Sam Cooke** | 220208777 | Undergrad | Junior | App Dev |Co.|Added features which include password reset and data deletion of firebase data. Working on refactoring the repository with new guidelines documents that I'm the lead developer of; in order to facilitate handover of codebase to new Chameleon members.|
 | **Kanishk Rajvanshi** | 222486026 | Postgrad | Junior | App Dev |  |Being a member of the Chameleon Evoleon App Team I worked on refactoring the code to make code more efficient. Have also added relevant comments in the code for better readability. Apart from this have done refactoring of the code following the coding practice document prepared by my colleagues.|
 | **Khanh Nguyen Nguyen** | 221393506 | Undergrad | Junior | App Dev |  |   |
 | **Mohammed Khalid M J Al-Malki** | 220499349 | Undergrad | Junior | App Dev |  |I'm in charge of charging status part. To complete this mission, I start writing coding to carry out a future in order to show the current charging status. I've done some tests on coding and they are still getting some errors to exporting the best result. And i am attending meetings with my teammates and collaborating with them to find solutions and new ideas for our project.|
